--- a/ibuydeal/Main.storyboard
+++ b/ibuydeal/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Bka-60-CdF">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="MbU-Fq-e7z">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
@@ -16,7 +16,7 @@
                         <collectionViewLayout key="collectionViewLayout" id="mKz-2x-vYi" customClass="WaterfallLayout" customModule="ibuydeal"/>
                         <cells>
                             <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="Cell" id="1t0-ZZ-oYo" customClass="CollectionViewCell" customModule="ibuydeal" customModuleProvider="target">
-                                <rect key="frame" x="140" y="64" width="320" height="317"/>
+                                <rect key="frame" x="140" y="0.0" width="320" height="317"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                                     <rect key="frame" x="0.0" y="0.0" width="320" height="317"/>
@@ -84,24 +84,6 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="njd-1m-WXo" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-153" y="-420"/>
-        </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="wdj-wU-FQ2">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Bka-60-CdF" sceneMemberID="viewController">
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="R7l-ah-UYI">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="MbU-Fq-e7z" kind="relationship" relationship="rootViewController" id="03j-vS-ZPt"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="2Qy-vD-e93" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-948" y="-369"/>
         </scene>
     </scenes>
 </document>
